syntax = "proto3";

import "grape/api/v1/core/common.proto";
import "grape/api/v1/confd/types.proto";

package grape.api.v1.confd;
option go_package = "grape/api/v1/confd";

message SetRequest {
  ServerConfig serverConfig = 1;
}

message SetResponse{
  int32 code = 1;
  string message = 2;
}

message GetRequest {
  string namespace = 1;
  string service = 2;
}

message GetResponse{
  int32 code = 1;
  string message = 2;
  ServerConfig serverConfig = 3;
}

message DelRequest {
  string namespace = 1;
  string service = 2;
}

message DelResponse{
  int32 code = 1;
  string message = 2;
}

service ApiServer {
  rpc Set(SetRequest) returns (SetResponse) {};
  rpc Get(GetRequest) returns (GetResponse) {};
  rpc Del(DelRequest) returns (DelResponse) {};
}
