syntax = "proto3";

package grape.api;
option go_package = "grape/api";

message Empty {}

enum MCPResourceType {
  SERVICE = 0;
  POLICY = 1;
  DEPLOY_GROUP = 2;
}

message Component {
  enum ComponentType {
    PILOT = 0;
    EXAUTH = 1;
    LOGTRANS = 2;
  }
  ComponentType comp_type = 1;

  string id = 2;

  string cluster_code = 3;

  string host = 4;

}